<resources>
    <string name="app_name">PYLT</string>
    <string name="action_settings">Settings</string>
    <string name="balance">Balance:</string>
    <string name="expenses">Expenses:</string>
    <string name="income">Income:</string>
    <string name="show">show</string>
    <string name="new_item">New Item</string>
    <string name="item_name">Name</string>
    <string name="tag">Tag</string>
    <string name="amount">Amount</string>
    <string name="save">save</string>
    <string name="expense">Expense</string>
    <string name="income_base">Income</string>
    <string name="show_list">Show list</string>
    <string name="edit_item">Edit item</string>
    <string name="show_lists">Show lists</string>
    <string name="edit">Edit</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings">Settings</string>
    <string name="simple_balance">Balance</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="todo">ToDo</string>
    <string name="title_activity_todo">todo</string>
    <string name="shoppinglist">Shopping List</string>
    <string name="add_list_info">You can add new lists with the plus button</string>
    <string name="title_activity_to_do_list">ToDoListActivity</string>
    <string name="create_card">Create new card</string>
    <string name="title">Title</string>
    <string name="edit_card">Edit card</string>
    <string name="delete">Delete</string>
</resources>