<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingEnd="50dp"
    android:paddingStart="50dp">

    <LinearLayout
        android:id="@+id/new_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/new_item"
            android:layout_marginBottom="50dp"/>

        <EditText android:id="@+id/item_name"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/item_name" />

        <EditText android:id="@+id/item_tag"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/tag" />

        <EditText android:id="@+id/amount"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/amount"
            android:inputType="number"/>

        <Switch
            android:id="@+id/income_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income_base"
            android:layout_margin="10dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>