<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.matyas.krista.pylt.Activities.NewCardActivity"
    android:paddingTop="50dp"
    android:paddingEnd="50dp"
    android:paddingStart="50dp">

    <LinearLayout
        android:id="@+id/new_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/new_edit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/create_card"
            android:layout_marginBottom="50dp"/>

        <EditText android:id="@+id/card_title"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/title" />


        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
